welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: value litMessage is not a member of object String
String litMessage=litMessage():String
       ^BDRBuggle:4: error: value update is not a member of String
    if(litMessage()="R"){
       ^BDRBuggle:9: error: value update is not a member of String
    if(litMessage()="L"){
       ^BDRBuggle:13: error: value update is not a member of String
    if(litMessage()="I"){
       ^BDRBuggle:17: error: value update is not a member of String
     if(litMessage()="A"){
        ^BDRBuggle:20: error: value update is not a member of String
     if(litMessage()="B"){
        ^BDRBuggle:24: error: value update is not a member of String
     if(litMessage()="C"){
        ^BDRBuggle:29: error: value update is not a member of String
     if(litMessage()="Z"){
        ^BDRBuggle:32: error: value update is not a member of String
     if(litMessage()="Y"){
        ^BDRBuggle:36: error: value update is not a member of String
     if(litMessage()="X"){
        ^